# option-pricer

./: .gitignore  CMakeLists.txt  README.md
include/: black_scholes.hpp
src/: black_scholes.cpp  main.cpp
